<resources>
    <string name="app_name">Video Status Maker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_privacypolicy">Privacy Policy</string>
    <string name="menu_rateus">Rate 5 Star</string>
    <string name="menu_shareapp">Share App</string>
    <string name="menu_moreapp">More App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_app">moreapp</string>
    <string name="rate">rateus</string>
    <string name="confirm_exit">Exit!!\nAre you sure you want to exit the app?</string>

</resources>