<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_privacypolicy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/menu_privacypolicy" />
        <item
            android:id="@+id/nav_rateus"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_rateus" />
        <item
            android:id="@+id/nav_shareapp"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_shareapp" />
        <item
            android:id="@+id/nav_moreapp"
            android:icon="@android:drawable/ic_menu_more"
            android:title="@string/menu_moreapp" />
    </group>
</menu>